# dwes-tarea03

./: README.md
tareas_dwes/: manage.py  pyproject.toml
tareas_dwes/tareas/: models.py  urls.py  views.py
tareas_dwes/tareas/migrations/: 0001_initial.py
tareas_dwes/tareas/templates/tareas/: detalle_tarea.html  lista_tareas.html
tareas_dwes/tareas_dwes/: asgi.py  settings.py  urls.py  wsgi.py
