[tool.poetry]
name = "tareas_dwes"
version = "0.1.0"
description = ""
authors = ["rhernandezmy <rhernandezmy@fpvirtualaragon.es>"]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
Django = "<6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
